versions/GNDS-v2.0/GNDS/c/src/v2.0/general/Energy.h

// --- Const-aware handles.
typedef const struct EnergyClass *const ConstHandle2ConstEnergy;
typedef       struct EnergyClass *const ConstHandle2Energy;
typedef const struct EnergyClass *      Handle2ConstEnergy;
typedef       struct EnergyClass *      Handle2Energy;
// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstEnergy
EnergyDefaultConst();
// +++ Create, default
extern_c Handle2Energy
EnergyDefault();
// --- Create, general, const
extern_c Handle2ConstEnergy
EnergyCreateConst(
   const double value,
   const char *const unit,
   ConstHandle2ConstDouble Double,
   ConstHandle2ConstUncertainty uncertainty,
   ConstHandle2ConstNBodyPhaseSpace NBodyPhaseSpace,
   ConstHandle2ConstPrimaryGamma primaryGamma,
   ConstHandle2ConstDiscreteGamma discreteGamma,
   ConstHandle2ConstXYs2d XYs2d,
   ConstHandle2ConstGeneralEvaporation generalEvaporation,
   ConstHandle2ConstEvaporation evaporation,
   ConstHandle2ConstWeightedFunctionals weightedFunctionals,
   ConstHandle2ConstSimpleMaxwellianFission simpleMaxwellianFission,
   ConstHandle2ConstMadlandNix MadlandNix
);
// +++ Create, general
extern_c Handle2Energy
EnergyCreate(
   const double value,
   const char *const unit,
   ConstHandle2ConstDouble Double,
   ConstHandle2ConstUncertainty uncertainty,
   ConstHandle2ConstNBodyPhaseSpace NBodyPhaseSpace,
   ConstHandle2ConstPrimaryGamma primaryGamma,
   ConstHandle2ConstDiscreteGamma discreteGamma,
   ConstHandle2ConstXYs2d XYs2d,
   ConstHandle2ConstGeneralEvaporation generalEvaporation,
   ConstHandle2ConstEvaporation evaporation,
   ConstHandle2ConstWeightedFunctionals weightedFunctionals,
   ConstHandle2ConstSimpleMaxwellianFission simpleMaxwellianFission,
   ConstHandle2ConstMadlandNix MadlandNix
);
// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
EnergyAssign(ConstHandle2Energy self, ConstHandle2ConstEnergy from);
// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
EnergyDelete(ConstHandle2ConstEnergy self);
// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
EnergyRead(ConstHandle2Energy self, const char *const filename);
// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
EnergyWrite(ConstHandle2ConstEnergy self, const char *const filename);
// +++ Print to standard output, in our prettyprinting format
extern_c int
EnergyPrint(ConstHandle2ConstEnergy self);
// +++ Print to standard output, as XML
extern_c int
EnergyPrintXML(ConstHandle2ConstEnergy self);
// +++ Print to standard output, as JSON
extern_c int
EnergyPrintJSON(ConstHandle2ConstEnergy self);
// -----------------------------------------------------------------------------
// Metadatum: value
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
EnergyValueHas(ConstHandle2ConstEnergy self);
// +++ Get
// +++ Returns by value
extern_c double
EnergyValueGet(ConstHandle2ConstEnergy self);
// +++ Set
extern_c void
EnergyValueSet(ConstHandle2Energy self, const double value);
// -----------------------------------------------------------------------------
// Metadatum: unit
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
EnergyUnitHas(ConstHandle2ConstEnergy self);
// +++ Get
// +++ Returns by value
extern_c const char *
EnergyUnitGet(ConstHandle2ConstEnergy self);
// +++ Set
extern_c void
EnergyUnitSet(ConstHandle2Energy self, const char *const unit);
// -----------------------------------------------------------------------------
// Child: Double
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
EnergyDoubleHas(ConstHandle2ConstEnergy self);
// --- Get, const
extern_c Handle2ConstDouble
EnergyDoubleGetConst(ConstHandle2ConstEnergy self);
// +++ Get
extern_c Handle2Double
EnergyDoubleGet(ConstHandle2Energy self);
// +++ Set
extern_c void
EnergyDoubleSet(ConstHandle2Energy self, ConstHandle2ConstDouble Double);
// -----------------------------------------------------------------------------
// Child: uncertainty
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
EnergyUncertaintyHas(ConstHandle2ConstEnergy self);
// --- Get, const
extern_c Handle2ConstUncertainty
EnergyUncertaintyGetConst(ConstHandle2ConstEnergy self);
// +++ Get
extern_c Handle2Uncertainty
EnergyUncertaintyGet(ConstHandle2Energy self);
// +++ Set
extern_c void
EnergyUncertaintySet(ConstHandle2Energy self, ConstHandle2ConstUncertainty uncertainty);
// -----------------------------------------------------------------------------
// Child: NBodyPhaseSpace
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
EnergyNBodyPhaseSpaceHas(ConstHandle2ConstEnergy self);
// --- Get, const
extern_c Handle2ConstNBodyPhaseSpace
EnergyNBodyPhaseSpaceGetConst(ConstHandle2ConstEnergy self);
// +++ Get
extern_c Handle2NBodyPhaseSpace
EnergyNBodyPhaseSpaceGet(ConstHandle2Energy self);
// +++ Set
extern_c void
EnergyNBodyPhaseSpaceSet(ConstHandle2Energy self, ConstHandle2ConstNBodyPhaseSpace NBodyPhaseSpace);
// -----------------------------------------------------------------------------
// Child: primaryGamma
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
EnergyPrimaryGammaHas(ConstHandle2ConstEnergy self);
// --- Get, const
extern_c Handle2ConstPrimaryGamma
EnergyPrimaryGammaGetConst(ConstHandle2ConstEnergy self);
// +++ Get
extern_c Handle2PrimaryGamma
EnergyPrimaryGammaGet(ConstHandle2Energy self);
// +++ Set
extern_c void
EnergyPrimaryGammaSet(ConstHandle2Energy self, ConstHandle2ConstPrimaryGamma primaryGamma);